# sqliteWrapper

./: CMakeLists.txt  README.md
inc/: database.h  database_data.h
src/: database.cpp  database_data.cpp  main.cpp  test.db
