PROJECT(test)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_CXX_FLAGS "-Wall -g -O2 -std=gnu++0x -DSQLITE_HAS_CODEC")

FILE(GLOB_RECURSE SRC_LIST "src/*.cpp")
FILE(GLOB_RECURSE HEAD_LIST "inc/*.h")

INCLUDE_DIRECTORIES("sqlcipher")
INCLUDE_DIRECTORIES("inc")

#ADD_LIBRARY(proxy STATIC ${FOUND_LIST} ${NET_LIST} ${XML_LIST})

ADD_EXECUTABLE(test  ${SRC_LIST})
TARGET_LINK_LIBRARIES(test pthread)
TARGET_LINK_LIBRARIES(test dl)
TARGET_LINK_LIBRARIES(test sqlcipher)
TARGET_LINK_LIBRARIES(test stdc++)
